--- a/src/main/resources/static/css/Common.css
+++ b/src/main/resources/static/css/Common.css
@@ -91,9 +91,9 @@ footer {
     background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.8), rgba(0, 0, 0,1),black);
 }
 
+
 @media (min-width: 960px) {
     .logo {
-        margin-left: 20%;
         max-width: 80px;
         height: 40px;
     }
@@ -144,8 +144,8 @@ footer {
         width: 40px;
     }
 
-    footer > img {
-        display: none;
+    footer img {
+        display:none;
     }
 
     footer svg.home {
@@ -160,6 +160,10 @@ footer {
     }
 
     footer > img {
+        width: 50px;
+    }
+
+    footer a img {
         width: 50px;
     }
 
