--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,5 +5,7 @@
     <input type="text" id="search" class="search-bar" placeholder="¿Qué te apetece escuchar?" onfocus="this.placeholder=''" onblur="this.placeholder='¿Qué te apetece escuchar?'">
     <img src="/img/icons/libro-gray.png" alt="" class="libro">
   </div>
+  <a href="/login">
   <img src="/img/icons/icon.svg" alt="" class="icono">
+  </a>
 </header>
